update deployment